<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/csl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <ImageView
        android:id="@+id/ivInspirioBot"
        android:layout_width="match_parent"
        android:layout_height="417dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/inspirobot" />

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableEnd="@drawable/ic_refresh_black_24dp"
        android:text="@string/generate"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="130dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/colorPrimary"
        android:layout_height="60dp"
        android:drawableEnd="@drawable/ic_share_black_24dp"
        android:text="@string/share"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivInspirioBot"
        app:layout_constraintVertical_bias="0.159" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:drawableStart="@drawable/ic_save_black_24dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnShare"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivInspirioBot"
        app:layout_constraintVertical_bias="0.159" />
</androidx.constraintlayout.widget.ConstraintLayout>